--- a/services.html
+++ b/services.html
@@ -363,8 +363,7 @@
                                     <div id="portfolioCarousel-5" class="carousel slide" data-ride="carousel"
                                         data-interval="false">
                                         <ol class="carousel-indicators">
-                                            <li data-target="#portfolioCarousel-5" data-slide-to="0" class="active">
-                                            </li>
+                                            <li data-target="#portfolioCarousel-5" data-slide-to="0" class="active"></li>
                                             <li data-target="#portfolioCarousel-5" data-slide-to="1"></li>
                                             <li data-target="#portfolioCarousel-5" data-slide-to="2"></li>
                                             <li data-target="#portfolioCarousel-5" data-slide-to="3"></li>
